--- a/account/src/main/resources/bootstrap.yml
+++ b/account/src/main/resources/bootstrap.yml
@@ -5,5 +5,5 @@ spring:
     active: dev
   cloud:
     config:
-      uri: http://localhost:8762
+      uri: https://github.com/grass-mudhorse/config-test
       fail-fast: true
