--- a/account/pom.xml
+++ b/account/pom.xml
@@ -39,5 +39,18 @@
             <version>2.1.1</version>
         </dependency>
     </dependencies>
+         
+    <profiles>
+        <profile>
+            <id>cloud</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.microsoft.azure</groupId>
+                    <artifactId>spring-cloud-starter-azure-spring-cloud-client</artifactId>
+                    <version>2.2.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
 </project>
