--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>1.18.6</version>
             <scope>provided</scope>
         </dependency>
+             
+        <dependency>
+             <groupId>com.microsoft.azure</groupId>
+             <artifactId>spring-cloud-starter-azure-spring-cloud-client</artifactId>
+             <version>2.1.2</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
